WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
196205
Regression(
r242369
) Trying to change profile picture on linked in shows file picker, not the image picker
https://bugs.webkit.org/show_bug.cgi?id=196205
Summary
Regression(r242369) Trying to change profile picture on linked in shows file ...
Chris Dumez
Reported
2019-03-25 09:26:10 PDT
Trying to change profile picture on linked in shows file picker, not the image picker since
r242369
.
Attachments
Patch
(2.32 KB, patch)
2019-03-25 09:28 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(2.35 KB, patch)
2019-03-25 09:59 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-03-25 09:26:33 PDT
<
rdar://problem/49083324
>
Chris Dumez
Comment 2
2019-03-25 09:28:49 PDT
Created
attachment 365867
[details]
Patch
Chris Dumez
Comment 3
2019-03-25 09:59:49 PDT
Created
attachment 365872
[details]
Patch
Geoffrey Garen
Comment 4
2019-03-25 13:03:45 PDT
Comment on
attachment 365872
[details]
Patch r=me Can we regression test this? If opening the panel is an issue, maybe use a low-level API test?
Chris Dumez
Comment 5
2019-03-25 13:21:59 PDT
(In reply to Geoffrey Garen from
comment #4
)
> Comment on
attachment 365872
[details]
> Patch > > r=me > > Can we regression test this? If opening the panel is an issue, maybe use a > low-level API test?
I discussed it with Wenson and it does not seem that proper automated testing would be practical at the moment. However, we can probably write a low-level API test.
Chris Dumez
Comment 6
2019-03-25 14:36:16 PDT
Looks like I can write a layout test for this, almost there...
Chris Dumez
Comment 7
2019-03-25 21:17:48 PDT
Comment on
attachment 365872
[details]
Patch Will follow up for the test, it is taking longer than I hoped.
WebKit Commit Bot
Comment 8
2019-03-25 21:45:32 PDT
Comment on
attachment 365872
[details]
Patch Rejecting
attachment 365872
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 365872, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Logging in as
commit-queue@webkit.org
... Fetching:
https://bugs.webkit.org/attachment.cgi?id=365872&action=edit
Fetching:
https://bugs.webkit.org/show_bug.cgi?id=196205
&ctype=xml&excludefield=attachmentdata Processing 1 patch from 1 bug. Updating working directory Processing patch 365872 from
bug 196205
. Fetching:
https://bugs.webkit.org/attachment.cgi?id=365872
Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Committing to
http://svn.webkit.org/repository/webkit/trunk
... M Source/WebKit/ChangeLog ERROR from SVN: Item is out of date: File '/trunk/Source/WebKit/ChangeLog' is out of date W: 444c0eb48870e7ca29baa97530aecb1ec213e12f and refs/remotes/origin/master differ, using rebase: :040000 040000 506332e0ce534159bb852cdf943d208e004c5868 951cfcaa2cada3ce5d92e403825aefbe1dcfae66 M Source Current branch master is up to date. ERROR: Not all changes have been committed into SVN, however the committed ones (if any) seem to be successfully integrated into the working tree. Please see the above messages for details. Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Committing to
http://svn.webkit.org/repository/webkit/trunk
... M Source/WebKit/ChangeLog ERROR from SVN: Item is out of date: File '/trunk/Source/WebKit/ChangeLog' is out of date W: 444c0eb48870e7ca29baa97530aecb1ec213e12f and refs/remotes/origin/master differ, using rebase: :040000 040000 506332e0ce534159bb852cdf943d208e004c5868 951cfcaa2cada3ce5d92e403825aefbe1dcfae66 M Source Current branch master is up to date. ERROR: Not all changes have been committed into SVN, however the committed ones (if any) seem to be successfully integrated into the working tree. Please see the above messages for details. Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Updating OpenSource Current branch master is up to date. Full output:
https://webkit-queues.webkit.org/results/11668782
WebKit Commit Bot
Comment 9
2019-03-25 22:48:14 PDT
Comment on
attachment 365872
[details]
Patch Clearing flags on attachment: 365872 Committed
r243485
: <
https://trac.webkit.org/changeset/243485
>
WebKit Commit Bot
Comment 10
2019-03-25 22:48:15 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug