Regression(r242369) Trying to change profile picture on linked in shows file picker, not the image picker https://bugs.webkit.org/show_bug.cgi?id=196205 <rdar://problem/49083324>

Reviewed by Geoffrey Garen.

Update our FileUploadPanel code on iOS to properly deal with the MIME types containing
wild cards (e.g. "image/*") that are defined in the HTML specification:
- https://html.spec.whatwg.org/multipage/input.html#attr-input-accept

Previously, we would fail to convert those to UTIs.

* UIProcess/ios/forms/WKFileUploadPanel.mm:


Canonical link: https://commits.webkit.org/210540@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243485 268f45cc-cd09-0410-ab3c-d52691b4dbfc