Source/WebKit/UIProcess/ios/forms/WKFileUploadPanel.mm
@@ -318,9 +318,17 @@ static NSSet<NSString *> *UTIsForMIMETypes(NSArray *mimeTypes)
 {
     NSMutableSet *mediaTypes = [NSMutableSet set];
     for (NSString *mimeType in mimeTypes) {
-        auto uti = WebCore::UTIFromMIMEType(mimeType);
-        if (!uti.isEmpty())
-            [mediaTypes addObject:(__bridge NSString *)uti];
+        if ([mimeType caseInsensitiveCompare:@"image/*"] == NSOrderedSame)
+            [mediaTypes addObject:(__bridge NSString *)kUTTypeImage];
+        else if ([mimeType caseInsensitiveCompare:@"video/*"] == NSOrderedSame)
+            [mediaTypes addObject:(__bridge NSString *)kUTTypeMovie];
+        else if ([mimeType caseInsensitiveCompare:@"audio/*"] == NSOrderedSame)
+            [mediaTypes addObject:(__bridge NSString *)kUTTypeAudio];
+        else {
+            auto uti = WebCore::UTIFromMIMEType(mimeType);
+            if (!uti.isEmpty())
+                [mediaTypes addObject:(__bridge NSString *)uti];
+        }
     }
     return mediaTypes;
 }
